# simp.gemma.cpp

./: CMakeLists.txt  main.cpp
src/: app.cpp  app.h  macros.h
